samples/_failures_safe/1761297741_fec1d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9aac7509.c: In function ‘main’:
./samples/SAFE/__tmp_9aac7509.c:144:12: error: expected identifier or ‘(’ at end of input
  144 |     struct compression_result
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9aac7509.c:144:12: error: expected declaration or statement at end of input
